tests/compile_fail/inner_name_conflict.stderr
error: Parameter name `__disponent_inner` is reserved. Use a different name.
  --> tests/compile_fail/inner_name_conflict.rs:10:27
   |
10 |         fn another(&self, __disponent_inner: i32) -> i32;
   |                           ^^^^^^^^^^^^^^^^^
